<resources>
    <string name="app_name">ALC challenge</string>
    <string name="welcome_note">Welcome to ALC 4.0</string>
    <string name="btn_about_alc">ABOUT ALC</string>
    <string name="btn_my_profile">MY PROFILE</string>
    <string name="my_name">Faruk Abdulganiyu</string>
    <string name="track">Track: Android</string>
    <string name="email">Email: faruk.abdulganiyu@gmail.com</string>
    <string name="myCountry">Country: Nigeria</string>
    <string name="myNumber">Phone Number: 2348068938375</string>
    <string name="slack_username">Slack Username: @farukA</string>
    <string name="my_profile_image">my profile image</string>
    <string name="profile_page">Profile</string>
    <string name="about_alc">About ALC</string>
</resources>